--- a/3D-playfield/3D-playfield.vcxproj
+++ b/3D-playfield/3D-playfield.vcxproj
@@ -141,10 +141,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Include\Main.cpp" />
+    <ClCompile Include="Include\Camera.cpp" />
+    <ClCompile Include="Include\Renderer.cpp" />
+    <ClCompile Include="Include\Shader.cpp" />
     <ClCompile Include="Include\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Include\Camera.h" />
     <ClInclude Include="Include\Renderer.h" />
+    <ClInclude Include="Include\Shader.h" />
     <ClInclude Include="Include\Shapes.h" />
     <ClInclude Include="Include\ThrowIfFailed.h" />
     <ClInclude Include="Include\Window.h" />
