--- a/3D-playfield/3D-playfield.vcxproj
+++ b/3D-playfield/3D-playfield.vcxproj
@@ -140,21 +140,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Include\FlashLight.cpp" />
     <ClCompile Include="Include\Main.cpp" />
     <ClCompile Include="Include\Camera.cpp" />
     <ClCompile Include="Include\Renderer.cpp" />
-    <ClCompile Include="Include\Resources\DepthStencil.cpp" />
-    <ClCompile Include="Include\Resources\ObjLoader.cpp" />
-    <ClCompile Include="Include\Resources\Shader.cpp" />
+    <ClCompile Include="Include\Resource_Handlers\Shader.cpp" />
+    <ClCompile Include="Include\Resource_Handlers\DepthStencil.cpp" />
+    <ClCompile Include="Include\Resource_Handlers\ObjLoader.cpp" />
     <ClCompile Include="Include\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\Camera.h" />
+    <ClInclude Include="Include\FlashLight.h" />
+    <ClInclude Include="Include\Resource_Handlers\DepthStencil.h" />
+    <ClInclude Include="Include\Resource_Handlers\ObjLoader.h" />
     <ClInclude Include="Include\Renderer.h" />
-    <ClInclude Include="Include\Resources\DepthStencil.h" />
-    <ClInclude Include="Include\Resources\ObjLoader.h" />
-    <ClInclude Include="Include\Resources\Shader.h" />
-    <ClInclude Include="Include\Resources\Shapes.h" />
+    <ClInclude Include="Include\Resource_Handlers\Shader.h" />
+    <ClInclude Include="Include\Resource_Handlers\Shapes.h" />
     <ClInclude Include="Include\ThrowIfFailed.h" />
     <ClInclude Include="Include\Window.h" />
   </ItemGroup>
