--- a/3D-playfield/3D-playfield.vcxproj
+++ b/3D-playfield/3D-playfield.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="Include\FlashLight.cpp" />
     <ClCompile Include="Include\Main.cpp" />
     <ClCompile Include="Include\Camera.cpp" />
+    <ClCompile Include="Include\PostEffects.cpp" />
     <ClCompile Include="Include\Renderer.cpp" />
     <ClCompile Include="Include\Resource_Handlers\ComputeShader.cpp" />
     <ClCompile Include="Include\Resource_Handlers\Object.cpp" />
@@ -150,12 +151,13 @@
     <ClCompile Include="Include\Resource_Handlers\Shader.cpp" />
     <ClCompile Include="Include\Resource_Handlers\Silly_Types\DepthStencil.cpp" />
     <ClCompile Include="Include\Resource_Handlers\ObjLoader.cpp" />
-    <ClCompile Include="Include\Resource_Handlers\Silly_Types\UnorderedAccessResource.cpp" />
     <ClCompile Include="Include\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\Camera.h" />
+    <ClInclude Include="Include\Contants.h" />
     <ClInclude Include="Include\FlashLight.h" />
+    <ClInclude Include="Include\PostEffects.h" />
     <ClInclude Include="Include\Resource_Handlers\ComputeShader.h" />
     <ClInclude Include="Include\Resource_Handlers\Silly_Types\DepthStencil.h" />
     <ClInclude Include="Include\Resource_Handlers\Object.h" />
@@ -164,7 +166,7 @@
     <ClInclude Include="Include\Resource_Handlers\Silly_Types\RenderTargetResource.h" />
     <ClInclude Include="Include\Resource_Handlers\Shader.h" />
     <ClInclude Include="Include\Resource_Handlers\Shapes.h" />
-    <ClInclude Include="Include\Resource_Handlers\Silly_Types\UnorderedAccessResource.h" />
+    <ClInclude Include="Include\Shaders\Constants.h" />
     <ClInclude Include="Include\ThrowIfFailed.h" />
     <ClInclude Include="Include\Window.h" />
   </ItemGroup>
